<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spearal Android</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="menu_new">New</string>
    <string name="menu_url">Url</string>
    <string name="form_name">Name</string>
    <string name="form_description">Description</string>
    <string name="form_imageurl">Image url</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

</resources>
